# mujoco-urdf-prep

./: .gitignore  MUJOCO_LOG.TXT  README.md  extract_angle_direct.py  extract_angle_indirect.py  extract_files.py  extract_mesh.py  extract_pos_direct.py  interactive_GUI(in process).py  joints_and_links.txt  pyproject.toml  utils.py
